Added Angular link and CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <title>D's Github Pages Site</title>
 </head>
 <body>
@@ -14,6 +15,13 @@
     </h2>
     <p>It's important to learn new things, and everyone is doing GitHub pages today. 
         I would love to be able to have a website for friends and employers to see.</p>
+
+        <h2>What is this page coded in?</h2>
+        <p>Right now, this title page is made using AngularJS. It is likely this will be updated in the future, so expect this page to change!</p>
+
+        <h2>
+            Sample Pages
+        </h2>
     
 </body>
 </html>
