--- a/index.html
+++ b/index.html
@@ -1,27 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="styles.css" />
     <title>D's Github Pages Site</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container p-1 my-1" id="main">
+      <div class="row border">
+        <h1>D's GitHub Pages Page</h1>
+        <div class="col">
+          <h2>
+            Why GitHub Pages?
+          </h2>
+          <p class="text">
+            It's important to learn new things, and everyone is doing GitHub
+            pages today. I would love to be able to have a website for friends
+            and employers to see.
+          </p>
 
-    <h1>D's GitHub Pages Page</h1>
-    <h2>
-        Why GitHub Pages?
-    </h2>
-    <p>It's important to learn new things, and everyone is doing GitHub pages today. 
-        I would love to be able to have a website for friends and employers to see.</p>
+          <h2>What is this page coded in?</h2>
+          <p class="text">
+            Right now, this title page is made using Bootstrap and Angular. It
+            is likely that this page will be modified in the future, so expect
+            changes!
+          </p>
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <h2>Who am I?</h2>
 
-        <h2>What is this page coded in?</h2>
-        <p>Right now, this title page is made using AngularJS. It is likely this will be updated in the future, so expect this page to change!</p>
-
-        <h2>
-            Sample Pages
+              <p class="text">
+                I am a soon-to-be graduate from Oregon State University, with a
+                Bachelors of Science in Computer Science, and a minor in
+                Statistics. I'm interested in all kinds of software and
+                development. Most of my degree focused on data science and
+                statistics, but I've been exposed to and have experience with
+                Android development, databases, parallel programming, game
+                development, and of course web development!
+              </p>
+            </div>
+            <div class="col">
+              <img src="headshot.jpg" id="headshot" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class = "row border">
+        <h2 id="worktitle">
+          Some of my previous work!
         </h2>
-    
-</body>
+
+        <div class="row">
+          <div class="col">
+            <h3 class="text">
+              Classroom VR For Heavy Civil Operations Capstone Project
+            </h3>
+            <img src="cvrhoc.png" class="portfolio-pic" />
+            <p class="text">
+              In my Capstone project for the College of Engineering at Oregon
+              State Univeristy, my team and I made a server hosting system for
+              Professor Joseph Louis, of the College of Civil and Construction
+              Engineering. He wanted an easy to use management system for
+              Unity3D scenes, which would let him host those scenes and present
+              them in class as problems for his students. Our job was to create
+              the server management system, as well as setup the Unity3D export
+              template, and providing sample scenes to test the server system
+              with.
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/CVRHOCDeployment"
+                target="_blank"
+              >
+                Link to GitHub Repo (Server Management)
+              </a>
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/ClassroomVRForCivilOperationsUnity"
+                target="_blank"
+              >
+                Link to GitHub Repo (Sample Scenes)
+              </a>
+            </p>
+          </div>
+
+          <div class="col">
+            <h3 class="text">COMPUTER! TELL ME THE WEATHER Project</h3>
+            <img src="weather.png" class="portfolio-pic" />
+            <p class="text">
+              I was annoyed by the quickly changing weather around Corvallis,
+              Oregon. It was always so hard what to tell I should wear each day.
+              A normal person would just check the weather app, but I would
+              always forget. Therefore, I created an automated system to tell me
+              the exact weather conditions every morning, focusing specifically
+              on whether or not there would be rain. I never forgot my coat
+              again! Then I switched to Mac later that year, and didn't want to
+              set it up with a whole new system.
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/domspersonalpythonprojects"
+                target="_blank"
+              >
+                Link to GitHub Repo
+              </a>
+            </p>
+          </div>
+
+          <div class="col">
+            <h3 class="text">Potato Messages Project For CS290</h3>
+            <img src="potato.jpeg" class="portfolio-pic" />
+            <p class="text">
+              This project was for CS290 "Web Development", with Rob Hess. My
+              team's final project was to create a full-stack web application.
+              We decided to create a website where users could, as the title
+              says, would let user's upload potato images and write potato
+              messages. These would be stored on a JSON file on the server. When
+              the page was loaded, images and messages would be displayed on the
+              potato. While the site is no longer functional, the repository is
+              still avaliable!
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/osu-cs290-sp21/final-project-potato-juice/tree/main"
+                target="_blank"
+              >
+                Link to GitHub Repo
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="row hidden">
+          <div class="col">
+            <h3 class="text">
+              Classroom VR For Heavy Civil Operations Capstone Project
+            </h3>
+            <img src="cvrhoc.png" class="portfolio-pic" />
+            <p class="text">
+              In my Capstone project for the College of Engineering at Oregon
+              State Univeristy, my team and I made a server hosting system for
+              Professor Joseph Louis, of the College of Civil and Construction
+              Engineering. He wanted an easy to use management system for
+              Unity3D scenes, which would let him host those scenes and present
+              them in class as problems for his students. Our job was to create
+              the server management system, as well as setup the Unity3D export
+              template, and providing sample scenes to test the server system
+              with.
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/CVRHOCDeployment"
+                target="_blank"
+              >
+                Link to GitHub Repo (Server Management)
+              </a>
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/ClassroomVRForCivilOperationsUnity"
+                target="_blank"
+              >
+                Link to GitHub Repo (Sample Scenes)
+              </a>
+            </p>
+          </div>
+
+          <div class="col">
+            <h3 class="text">COMPUTER! TELL ME THE WEATHER Project</h3>
+            <img src="weather.png" class="portfolio-pic" />
+            <p class="text">
+              I was annoyed by the quickly changing weather around Corvallis,
+              Oregon. It was always so hard what to tell I should wear each day.
+              A normal person would just check the weather app, but I would
+              always forget. Therefore, I created an automated system to tell me
+              the exact weather conditions every morning, focusing specifically
+              on whether or not there would be rain. I never forgot my coat
+              again! Then I switched to Mac later that year, and didn't want to
+              set it up with a whole new system.
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/DWilson29/domspersonalpythonprojects"
+                target="_blank"
+              >
+                Link to GitHub Repo
+              </a>
+            </p>
+          </div>
+
+          <div class="col">
+            <h3 class="text">Potato Messages Project For CS290</h3>
+            <img src="potato.jpeg" class="portfolio-pic" />
+            <p class="text">
+              This project was for CS290 "Web Development", with Rob Hess. My
+              team's final project was to create a full-stack web application.
+              We decided to create a website where users could, as the title
+              says, would let user's upload potato images and write potato
+              messages. These would be stored on a JSON file on the server. When
+              the page was loaded, images and messages would be displayed on the
+              potato. While the site is no longer functional, the repository is
+              still avaliable!
+            </p>
+            <p class="page-link">
+              <a
+                href="https://github.com/osu-cs290-sp21/final-project-potato-juice/tree/main"
+                target="_blank"
+              >
+                Link to GitHub Repo
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
