Updated main page

--- a/index.html
+++ b/index.html
@@ -66,54 +66,24 @@
         <div class="row">
           <div class="col">
             <h3 class="text">
-              Classroom VR For Heavy Civil Operations Capstone Project
+              Analyzing True Crime Podcasts - Simple Anaconda/Pandas Project
             </h3>
-            <img src="cvrhoc.png" class="portfolio-pic" />
+            <img src="truecrime.png" class="portfolio-pic" />
             <p class="text">
-              In my Capstone project for the College of Engineering at Oregon
-              State Univeristy, my team and I made a server hosting system for
-              Professor Joseph Louis, of the College of Civil and Construction
-              Engineering. He wanted an easy to use management system for
-              Unity3D scenes, which would let him host those scenes and present
-              them in class as problems for his students. Our job was to create
-              the server management system, as well as setup the Unity3D export
-              template, and providing sample scenes to test the server system
-              with.
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/CVRHOCDeployment"
-                target="_blank"
-              >
-                Link to GitHub Repo (Server Management)
-              </a>
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/ClassroomVRForCivilOperationsUnity"
-                target="_blank"
-              >
-                Link to GitHub Repo (Sample Scenes)
-              </a>
-            </p>
-          </div>
+              This project was to get me familiar with Anaconda, Pandas, 
+              and using Jupyter Notebook. I've always been a little put off
+              by Python due to some bad experiences, however it is an
+              industry standard for a good reason. My statistics classes always
+              preferred R, as in academics R is the standard. Learning to do 
+              the same things I've done in R in Python is humbling but important work.
+              To start, I looked on popular Kaggle datasets, picked one that sounded interesting,
+              and started getting to work to find trends and build visualizations.
+              
 
-          <div class="col">
-            <h3 class="text">COMPUTER! TELL ME THE WEATHER Project</h3>
-            <img src="weather.png" class="portfolio-pic" />
-            <p class="text">
-              I was annoyed by the quickly changing weather around Corvallis,
-              Oregon. It was always so hard what to tell I should wear each day.
-              A normal person would just check the weather app, but I would
-              always forget. Therefore, I created an automated system to tell me
-              the exact weather conditions every morning, focusing specifically
-              on whether or not there would be rain. I never forgot my coat
-              again! Then I switched to Mac later that year, and didn't want to
-              set it up with a whole new system.
             </p>
             <p class="page-link">
               <a
-                href="https://github.com/DWilson29/domspersonalpythonprojects"
+                href="https://github.com/DWilson29/dssimpledataprojects"
                 target="_blank"
               >
                 Link to GitHub Repo
@@ -122,29 +92,24 @@
           </div>
 
           <div class="col">
-            <h3 class="text">Potato Messages Project For CS290</h3>
-            <img src="potato.jpeg" class="portfolio-pic" />
+            <h3 class="text">
+              Tableau Public - Learning the Basics and Why Taking Your Time Is So Important!
+            </h3>
+            <img src="tableau.png" class="portfolio-pic" />
             <p class="text">
-              This project was for CS290 "Web Development", with Rob Hess. My
-              team's final project was to create a full-stack web application.
-              We decided to create a website where users could, as the title
-              says, would let user's upload potato images and write potato
-              messages. These would be stored on a JSON file on the server. When
-              the page was loaded, images and messages would be displayed on the
-              potato. While the site is no longer functional, the repository is
-              still avaliable!
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/osu-cs290-sp21/final-project-potato-juice/tree/main"
-                target="_blank"
-              >
-                Link to GitHub Repo
-              </a>
+              I've been doing research into the skills most companies want from a 
+              "Data Scientist", and it looks like the big ones are SQL, Excel,
+              Python/R and of course, Tableau or Power BI. I was exposed to the 
+              first three in my degree, but Tableau? Power BI? Never heard of them!
+              I was looking for ways to explore this field of study, but all the
+              products are specifialy for companies. How is someone supposed to learn
+              this software it costs a million dollars a month or needs a 500 dollar
+              certificate? Turns out, Tableau Public is a thing, and is super cool. I hope to bring
+              more visualizations to this platform.
             </p>
           </div>
         </div>
-        <div class="row hidden">
+        <div class="row">
           <div class="col">
             <h3 class="text">
               Classroom VR For Heavy Civil Operations Capstone Project
@@ -180,7 +145,7 @@
           </div>
 
           <div class="col">
-            <h3 class="text">COMPUTER! TELL ME THE WEATHER Project</h3>
+            <h3 class="text">"COMPUTER!!! TELL ME THE WEATHER" Project</h3>
             <img src="weather.png" class="portfolio-pic" />
             <p class="text">
               I was annoyed by the quickly changing weather around Corvallis,
