--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               Python/R and of course, Tableau or Power BI. I was exposed to the 
               first three in my degree, but Tableau? Power BI? Never heard of them!
               I was looking for ways to explore this field of study, but all the
-              products are specifialy for companies. How is someone supposed to learn
-              this software it costs a million dollars a month or needs a 500 dollar
+              products are specifically for companies. How is someone supposed to learn
+              this software if it costs a million dollars a month or needs a 500 dollar
               certificate? Turns out, Tableau Public is a thing, and is super cool. I hope to bring
               more visualizations to this platform.
             </p>
