--- a/index.html
+++ b/index.html
@@ -1,196 +1,176 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+<!DOCTYPE HTML>
+<!--
+	Miniport by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>D Wilson Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <title>D's Github Pages Site</title>
-  </head>
-  <body>
-    <div class="container p-1 my-1" id="main">
-      <div class="row border">
-        <h1>D's GitHub Pages Page</h1>
-        <div class="col">
-          <h2>
-            Why GitHub Pages?
-          </h2>
-          <p class="text">
-            It's important to learn new things, and everyone is doing GitHub
-            pages today. I would love to be able to have a website for friends
-            and employers to see.
-          </p>
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Home</a></li>
+					<li><a href="#work">Work</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Socials</a></li>
+				</ul>
+			</nav>
 
-          <h2>What is this page coded in?</h2>
-          <p class="text">
-            Right now, this title page is made using Bootstrap and Angular. It
-            is likely that this page will be modified in the future, so expect
-            changes!
-          </p>
-        </div>
-        <div class="col">
-          <div class="row">
-            <div class="col">
-              <h2>Who am I?</h2>
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/headshot.jpg" alt="" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1>Hi. I'm <strong>D Wilson</strong>.</h1>
+							</header>
+							<p>And this is my technical portfolio site, including links to my work</p>
+							<a href="#work" class="button large scrolly">Learn about what I do</a>
+						</div>
+					</div>
+				</div>
+			</article>
 
-              <p class="text">
-                I am a soon-to-be graduate from Oregon State University, with a
-                Bachelors of Science in Computer Science, and a minor in
-                Statistics. I'm interested in all kinds of software and
-                development. Most of my degree focused on data science and
-                statistics, but I've been exposed to and have experience with
-                Android development, databases, parallel programming, game
-                development, and of course web development!
-              </p>
-            </div>
-            <div class="col">
-              <img src="headshot.jpg" id="headshot" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row border">
-        <h2 id="worktitle">
-          Some of my previous work!
-        </h2>
+		<!-- Work -->
+			<article id="work" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Here's all the stuff I do.</h2>
+						<p>My focus is primarily in data science, but I love web development, game design, and robotics!</p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-database"></span>
+								<h3>Data Science</h3>
+								<p>I love applying statistical and computer science tools to solve difficult problems. 
+									There's so many big problems that need to be solved in the world, and data science allows 
+									us to test if solutions actually work or just sound good on paper. This is the main focus of my career, educational, and professional 
+									ambitions, which also connects to a wide variety of other fields, such as DevOps, cybersecurity, machine learning,
+									as well as relevant context for any field they work in. Data science requires that it's practitioners be familiar with 
+									tools of every trade, to ensure that the models and assumptions we build actually match reality and make sense 
+									in the real world.
+								</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-trophy"></span>
+								<h3>Game Development and Design</h3>
+								<p>
+									Video games are to me, most interesting when they provide useful insights into real world problems. 
+									This most often comes in two ways, either through story or gameplay systems, and what interests me the 
+									most is using mechanics to teach the player something. Whether it's city builders, strategy games, or 
+									the recent wave of sandbox open world games, all of them use interesting systems to teach players about 
+									something bigger than just the game itself. My biggest inspirations for my personal work are simulation games
+									like Cities: Skylines, Victoria 2, and Rimworld and systemic games like Far Cry 2, S.T.A.L.K.E.R, and MGS V.
+								</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-cog"></span>
+								<h3>Robotics and "Hands On" Work</h3>
+								<p>I spent 8 years in FIRST robotics, leading my team to the World Championships twice. In that time,
+									I worked on a variety of projects. I designed two-wheeled assemblies that could raise and lower to 
+									match varying terrain. I designed, wired, and coded an ultrasonic field tracking system, that would alert 
+									us to opposing robots in our path of travel. I ran a CNC milling machine, mentoring most of my team on it's 
+									proper setup and operation. That time gave me a strong desire to always learn different and interesting areas 
+									of study, as my wide experience gave me a more complete perspective on the technical problems our team faced.
+								</p>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+					</footer>
+				</div>
+			</article>
 
-        <div class="row">
-          <div class="col">
-            <h3 class="text">
-              Analyzing True Crime Podcasts - Simple Anaconda/Pandas Project
-            </h3>
-            <img src="truecrime.png" class="portfolio-pic" />
-            <p class="text">
-              This project was to get me familiar with Anaconda, Pandas, 
-              and using Jupyter Notebook. I've always been a little put off
-              by Python due to some bad experiences, however it is an
-              industry standard for a good reason. My statistics classes always
-              preferred R, as in academics R is the standard. Learning to do 
-              the same things I've done in R in Python is humbling but important work.
-              To start, I looked on popular Kaggle datasets, picked one that sounded interesting,
-              and started getting to work to find trends and build visualizations.
-              
+		<!-- Portfolio -->
+			<article id="portfolio" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>Here’s some stuff I made recently.</h2>
+					</header>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a target="_blank" href="https://public.tableau.com/app/profile/dawn.wilson6430/viz/FashionProducts-BasicDataVisualization/Sheet1" class="image featured"><img src="images/tableau1.png" alt="" /></a>
+								<h3><a target="_blank" href="https://public.tableau.com/app/profile/dawn.wilson6430/viz/FashionProducts-BasicDataVisualization/Sheet1">Fashion Trends Data Visualization in Tableau</a></h3>
+								<p>A quick data visualization project using recent fashion trends using Tableau Public.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a target="_blank" href="https://github.com/DWilson29/dssimpledataprojects" class="image featured"><img src="images/truecrime.png" alt="" /></a>
+								<h3><a target="_blank" href="https://github.com/DWilson29/dssimpledataprojects">True Crime Data Visualization in Pandas</a></h3>
+								<p>Another quick data visualization project, to help me learn Pandas and working in Jupyter Notebook.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a target="_blank" href="https://github.com/DWilson29/dssimpledataprojects" class="image featured"><img src="images/otp.png" alt="" /></a>
+								<h3><a target="_blank" href="https://github.com/DWilson29/dssimpledataprojects">One Time Pad Generation Using Juypter Notebook</a></h3>
+								<p>Using Juypter notebook, I made an OTP generation system.</p>
+							</article>
+						</div>
+						</div>
+					</div>
+				</div>
+			</article>
 
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/dssimpledataprojects"
-                target="_blank"
-              >
-                Link to GitHub Repo
-              </a>
-            </p>
-          </div>
+		<!-- Contact -->
+			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+						<div class="col-12">
+							<hr />
+							<h3>Find me on ...</h3>
+							<ul class="social">
+								<li><a target="_blank" href="https://twitter.com/DWilson35043797" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a target="_blank" href="https://www.facebook.com/profile.php?id=100009271774302" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a target="_blank" href="https://www.linkedin.com/in/dom-wilson-98981a17a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a target="_blank" href="https://github.com/DWilson29" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!--
+								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
+								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
+								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
+								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
+								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
+								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
+								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
+								-->
+							</ul>
+							<hr />
+						</div>
+					</div>
+					<footer>
+						<ul id="copyright">
+							<li>All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
+				</div>
+			</article>
 
-          <div class="col">
-            <h3 class="text">
-              Tableau Public - Learning the Basics and Why Taking Your Time Is So Important!
-            </h3>
-            <img src="tableau.png" class="portfolio-pic" />
-            <p class="text">
-              I've been doing research into the skills most companies want from a 
-              "Data Scientist", and it looks like the big ones are SQL, Excel,
-              Python/R and of course, Tableau or Power BI. I was exposed to the 
-              first three in my degree, but Tableau? Power BI? Never heard of them!
-              I was looking for ways to explore this field of study, but all the
-              products are specifically for companies. How is someone supposed to learn
-              this software if it costs a million dollars a month or needs a 500 dollar
-              certificate? Turns out, Tableau Public is a thing, and is super cool. I hope to bring
-              more visualizations to this platform.
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <h3 class="text">
-              Classroom VR For Heavy Civil Operations Capstone Project
-            </h3>
-            <img src="cvrhoc.png" class="portfolio-pic" />
-            <p class="text">
-              In my Capstone project for the College of Engineering at Oregon
-              State Univeristy, my team and I made a server hosting system for
-              Professor Joseph Louis, of the College of Civil and Construction
-              Engineering. He wanted an easy to use management system for
-              Unity3D scenes, which would let him host those scenes and present
-              them in class as problems for his students. Our job was to create
-              the server management system, as well as setup the Unity3D export
-              template, and providing sample scenes to test the server system
-              with.
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/CVRHOCDeployment"
-                target="_blank"
-              >
-                Link to GitHub Repo (Server Management)
-              </a>
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/ClassroomVRForCivilOperationsUnity"
-                target="_blank"
-              >
-                Link to GitHub Repo (Sample Scenes)
-              </a>
-            </p>
-          </div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-          <div class="col">
-            <h3 class="text">"COMPUTER!!! TELL ME THE WEATHER" Project</h3>
-            <img src="weather.png" class="portfolio-pic" />
-            <p class="text">
-              I was annoyed by the quickly changing weather around Corvallis,
-              Oregon. It was always so hard what to tell I should wear each day.
-              A normal person would just check the weather app, but I would
-              always forget. Therefore, I created an automated system to tell me
-              the exact weather conditions every morning, focusing specifically
-              on whether or not there would be rain. I never forgot my coat
-              again! Then I switched to Mac later that year, and didn't want to
-              set it up with a whole new system.
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/DWilson29/domspersonalpythonprojects"
-                target="_blank"
-              >
-                Link to GitHub Repo
-              </a>
-            </p>
-          </div>
-
-          <div class="col">
-            <h3 class="text">Potato Messages Project For CS290</h3>
-            <img src="potato.jpeg" class="portfolio-pic" />
-            <p class="text">
-              This project was for CS290 "Web Development", with Rob Hess. My
-              team's final project was to create a full-stack web application.
-              We decided to create a website where users could, as the title
-              says, would let user's upload potato images and write potato
-              messages. These would be stored on a JSON file on the server. When
-              the page was loaded, images and messages would be displayed on the
-              potato. While the site is no longer functional, the repository is
-              still avaliable!
-            </p>
-            <p class="page-link">
-              <a
-                href="https://github.com/osu-cs290-sp21/final-project-potato-juice/tree/main"
-                target="_blank"
-              >
-                Link to GitHub Repo
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+	</body>
 </html>
