Added article on Sudoku Solver

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,19 @@
 	
 	<header class="list__header">
 		<h2 class="list__title post__title">
+			<a href="/posts/golangsudoku/" rel="bookmark">
+			Building a Sudoku Solver in Golang
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		I used to like playing Sudoku. I used to have an app on my phone that would let me play Sudoku. I mostly used it during class whenever I was bored. I ended up getting to a point with the app where I ended up stuck on the really hard board, and I just couldn&rsquo;t figure it out. True Sudoku fans may tell you it&rsquo;s all about skill. In truth, it&rsquo;s really a truly simple algorithm.
+	</div>
+</article><article class="list__item post">
+	
+	<header class="list__header">
+		<h2 class="list__title post__title">
 			<a href="/posts/hugo-basics/" rel="bookmark">
 			Learning Hugo or: How I Learned to Stop Worrying and Love Static Site Generation
 			</a>
