--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,20 @@
 	
 	<header class="list__header">
 		<h2 class="list__title post__title">
+			<a href="/posts/websocketsbasics/" rel="bookmark">
+			How I stumbled my way into learning Websockets
+			</a>
+		</h2>
+		
+	</header>
+	<div class="content list__excerpt post__content clearfix">
+		So I&rsquo;ve been on a Golang kick recently. After hearing all the cool kids talk about it, I&rsquo;ve been trying to learn everything about it. Along with that, I&rsquo;ve been trying to learn new/interesting concepts that Golang can be used for, particularly focusing on stuff I suck at.
+Web development is one such area. I hate Javascript. It gives me the ick-ies. But, I hear of these wonderful Golang packages that let us do so much without having to touch a line of stinking JS.
+	</div>
+</article><article class="list__item post">
+	
+	<header class="list__header">
+		<h2 class="list__title post__title">
 			<a href="/posts/golangsudoku/" rel="bookmark">
 			Building a Sudoku Solver in Golang
 			</a>
